# wch-ch56x-lib

./: .gitmodules  .pre-commit-config.yaml  BREAKING_CHANGES.md  BUILD.md  CMakeLists.txt  README.md  format.sh
.github/workflows/: Build.yml
docs/: SerDes.md  Testing.md  USB30.md
src/: CMakeLists.txt  format.sh
src/wch-ch56x-lib/HSPIDevice/: hspi.c  hspi.h
src/wch-ch56x-lib/HSPIDeviceScheduled/: hspi_scheduled.c  hspi_scheduled.h
src/wch-ch56x-lib/SerDesDevice/: serdes.c  serdes.h
src/wch-ch56x-lib/USBDevice/: usb20.c  usb20.h  usb2_utils.h  usb30.c  usb30.h  usb30_utils.h  usb_descriptors.h  usb_device.c  usb_device.h  usb_endpoints.c  usb_endpoints.h  usb_types.h
src/wch-ch56x-lib/hspi/: hspi.c  hspi.h
src/wch-ch56x-lib/hspi_scheduled/: hspi_scheduled.c  hspi_scheduled.h
src/wch-ch56x-lib/interrupt_queue/: interrupt_queue.c  interrupt_queue.h
src/wch-ch56x-lib/logging/: log_printf.c  log_printf.h  log_serdes.c  log_serdes.h  log_to_buffer.c  log_to_buffer.h  logging.c  logging.h  logging_definitions.h  nanoprintf_impl.c  nanoprintf_impl.h
src/wch-ch56x-lib/memory/: alloc.c  alloc.h  fifo.c  fifo.h  pool.h  ramx_alloc.c  ramx_alloc.h
src/wch-ch56x-lib/serdes/: serdes.c  serdes.h
src/wch-ch56x-lib/usb/: usb20.c  usb20.h  usb2_utils.h  usb30.c  usb30.h  usb30_utils.h  usb_device.c  usb_device.h  usb_endpoints.c  usb_endpoints.h  usb_types.h
src/wch-ch56x-lib/utils/: critical_section.c  critical_section.h
tests/: CMakeLists.txt
tests/native/test_loopback/: Makefile  test_loopback.c
tests/native/test_speedtest/: Makefile  test_speedtest.c
tests/scripts/: requirements.txt  test_loopback.py  test_loopback_zlp.py  test_stress.py
tests/test_firmware_fifo/: CMakeLists.txt
tests/test_firmware_fifo/User/: main.c
tests/test_firmware_hspi/: CMakeLists.txt
tests/test_firmware_hspi/User/: main.c
tests/test_firmware_loopback/: CMakeLists.txt
tests/test_firmware_loopback/User/: definitions.h  main.c  usb2_device_descriptors.h  usb3_device_descriptors.h  usb_device.h
tests/test_firmware_serdes/: CMakeLists.txt
tests/test_firmware_serdes/User/: main.c
tests/test_firmware_unittests/: CMakeLists.txt
tests/test_firmware_unittests/User/: main.c  test_interrupt_queue.h  test_memory_allocator.h  test_pool.h  test_usb_device.h
tests/test_firmware_usb_loopback/: CMakeLists.txt
tests/test_firmware_usb_loopback/User/: definitions.h  main.c  usb2_device_descriptors.h  usb2_device_descriptors_alt_endpoints.h  usb3_device_descriptors.h  usb_device.h
tests/test_firmware_usb_loopback_delayed/: CMakeLists.txt
tests/test_firmware_usb_loopback_delayed/User/: definitions.h  main.c  usb2_fs_device_descriptors.h  usb2_hs_device_descriptors.h  usb_device.h
tests/test_firmware_usb_loopback_separate_usb_stacks/: CMakeLists.txt
tests/test_firmware_usb_loopback_separate_usb_stacks/User/: definitions.h  main.c  usb2_device.c  usb2_device.h  usb2_device_descriptors.h  usb2_device_handlers.h  usb3_device.c  usb3_device.h  usb3_device_descriptors.h  usb3_device_handlers.h
tests/test_firmware_usb_speedtest/: CMakeLists.txt
tests/test_firmware_usb_speedtest/User/: definitions.h  main.c  usb2_device_descriptors.h  usb3_device_descriptors.h  usb_device.h
tests/test_firmware_usb_stress_test/: CMakeLists.txt
tests/test_firmware_usb_stress_test/User/: main.c  usb2_device_descriptors.h  usb2_fs_device_descriptors.h  usb2_ls_device_descriptors.h  usb3_ss_device_descriptors.h  usb_device.h
tests/test_firmware_usb_stress_test_delayed/: CMakeLists.txt
tests/test_firmware_usb_stress_test_delayed/User/: definitions.h  main.c  usb2_fs_device_descriptors.h  usb2_hs_device_descriptors.h  usb3_ss_device_descriptors.h  usb_device.h
tools/firmware_debug_board/: CMakeLists.txt
tools/firmware_debug_board/User/: main.c  usb2_device_descriptors.h  usb_device.h
tools/scripts/: print_logs.py  print_timing_from_trace.py  requirements.txt
